--- a/FLASHCARDS .1/style.css
+++ b/FLASHCARDS .1/style.css
@@ -43,7 +43,7 @@
     scale: 120%;
     background-color: #73ea77;
   }
-  
+
   #card-con {
     margin-top: 1em;
   }
@@ -106,6 +106,7 @@
     color: #363d55;
     font-weight: 600;
     margin-bottom: 0.3em;
+    align-items: left;
   }
   
   textarea {
@@ -161,6 +162,7 @@
   }
   
   .question-div {
+    text-align: left;
     margin-bottom: 0.5em;
     font-weight: 500;
     color: #282c3c;
